--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gray-matter": "^4.0.3",
     "markdown-to-jsx": "^7.7.15",
     "next": "15.5.5",
+    "prism-react-renderer": "^2.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
